Fix collapse toggle target

--- a/MyBookmarks/static/style.css
+++ b/MyBookmarks/static/style.css
@@ -154,7 +154,7 @@ form {
 }
 
 @media (min-width: 901px) {
-    .category-menu {
+    .sidebar {
         display: block !important;
     }
 
